WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102862
[Resource Timing] Populate PerformanceResourceTiming structs with timing data
https://bugs.webkit.org/show_bug.cgi?id=102862
Summary
[Resource Timing] Populate PerformanceResourceTiming structs with timing data
James Simonsen
Reported
2012-11-20 19:22:01 PST
[Resource Timing] Populate PerformanceResourceTiming structs with timing data
Attachments
Patch
(12.66 KB, patch)
2012-11-20 19:38 PST
,
James Simonsen
tonyg
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Simonsen
Comment 1
2012-11-20 19:38:35 PST
Created
attachment 175324
[details]
Patch
James Simonsen
Comment 2
2012-11-20 19:40:42 PST
I split up the old Resource Timing patch into smaller pieces. This is just the part applicable to the exposed API. I don't think anything has changed since you reviewed it, but give it a quick skim just in case.
WebKit Review Bot
Comment 3
2012-11-21 16:05:07 PST
Comment on
attachment 175324
[details]
Patch Rejecting
attachment 175324
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/14959116
James Simonsen
Comment 4
2012-11-21 16:51:02 PST
Committed
r135458
: <
http://trac.webkit.org/changeset/135458
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug