Source/WebCore/page/PerformanceEntry.h
@@ -58,7 +58,7 @@ public:
     }
 
 protected:
-    PerformanceEntry(const String& name, const String& entryType, double startTime, double duration);
+    PerformanceEntry(const String& name, const String& entryType, double startTime, double finishTime);
 
 private:
     const String m_name;
