Source/WebCore/page/PerformanceResourceTiming.cpp
@@ -44,8 +44,15 @@
 
 namespace WebCore {
 
-PerformanceResourceTiming::PerformanceResourceTiming(const ResourceRequest& request, const ResourceResponse& response, double finishTime, Document* requestingDocument)
-    : PerformanceEntry(request.url().string(), "resource", response.resourceLoadTiming()->requestTime, finishTime)
+double monotonicTimeToDocumentMilliseconds(Document* document, double seconds)
+{
+    ASSERT(seconds >= 0.0);
+    return document->loader()->timing()->monotonicTimeToZeroBasedDocumentTime(seconds) * 1000.0;
+}
+
+PerformanceResourceTiming::PerformanceResourceTiming(const AtomicString& initiatorType, const ResourceRequest& request, const ResourceResponse& response, double initiationTime, double finishTime, Document* requestingDocument)
+    : PerformanceEntry(request.url().string(), "resource", monotonicTimeToDocumentMilliseconds(requestingDocument, initiationTime), monotonicTimeToDocumentMilliseconds(requestingDocument, finishTime))
+    , m_initiatorType(initiatorType)
     , m_timing(response.resourceLoadTiming())
     , m_finishTime(finishTime)
     , m_requestingDocument(requestingDocument)
@@ -56,10 +63,9 @@ PerformanceResourceTiming::~PerformanceResourceTiming()
 {
 }
 
-String PerformanceResourceTiming::initiatorType() const
+AtomicString PerformanceResourceTiming::initiatorType() const
 {
-    // FIXME: This should be decided by the resource type.
-    return "other";
+    return m_initiatorType;
 }
 
 // FIXME: Need to enforce same-origin policy on these.
@@ -77,12 +83,13 @@ double PerformanceResourceTiming::redirectEnd() const
 
 double PerformanceResourceTiming::fetchStart() const
 {
-    return monotonicTimeToDocumentMilliseconds(m_timing->requestTime);
+    // FIXME: This should be different depending on redirects.
+    return (startTime());
 }
 
 double PerformanceResourceTiming::domainLookupStart() const
 {
-    if (m_timing->dnsStart < 0)
+    if (!m_timing || m_timing->dnsStart < 0)
         return fetchStart();
 
     return resourceTimeToDocumentMilliseconds(m_timing->dnsStart);
@@ -90,7 +97,7 @@ double PerformanceResourceTiming::domainLookupStart() const
 
 double PerformanceResourceTiming::domainLookupEnd() const
 {
-    if (m_timing->dnsEnd < 0)
+    if (!m_timing || m_timing->dnsEnd < 0)
         return domainLookupStart();
 
     return resourceTimeToDocumentMilliseconds(m_timing->dnsEnd);
@@ -98,7 +105,7 @@ double PerformanceResourceTiming::domainLookupEnd() const
 
 double PerformanceResourceTiming::connectStart() const
 {
-    if (m_timing->connectStart < 0) // Connection was reused.
+    if (!m_timing || m_timing->connectStart < 0) // Connection was reused.
         return domainLookupEnd();
 
     // connectStart includes any DNS time, so we may need to trim that off.
@@ -111,7 +118,7 @@ double PerformanceResourceTiming::connectStart() const
 
 double PerformanceResourceTiming::connectEnd() const
 {
-    if (m_timing->connectEnd < 0) // Connection was reused.
+    if (!m_timing || m_timing->connectEnd < 0) // Connection was reused.
         return connectStart();
 
     return resourceTimeToDocumentMilliseconds(m_timing->connectEnd);
@@ -119,37 +126,39 @@ double PerformanceResourceTiming::connectEnd() const
 
 double PerformanceResourceTiming::secureConnectionStart() const
 {
-    if (m_timing->sslStart < 0) // Secure connection not negotiated.
-        return 0;
+    if (!m_timing || m_timing->sslStart < 0) // Secure connection not negotiated.
+        return 0.0;
 
     return resourceTimeToDocumentMilliseconds(m_timing->sslStart);
 }
 
 double PerformanceResourceTiming::requestStart() const
 {
+    if (!m_timing)
+        return connectEnd();
     return resourceTimeToDocumentMilliseconds(m_timing->sendStart);
 }
 
 double PerformanceResourceTiming::responseStart() const
 {
+    if (!m_timing)
+        return requestStart();
     // FIXME: This number isn't exactly correct. See the notes in PerformanceTiming::responseStart().
     return resourceTimeToDocumentMilliseconds(m_timing->receiveHeadersEnd);
 }
 
 double PerformanceResourceTiming::responseEnd() const
 {
-    return monotonicTimeToDocumentMilliseconds(m_finishTime);
-}
-
-double PerformanceResourceTiming::monotonicTimeToDocumentMilliseconds(double seconds) const
-{
-    ASSERT(seconds >= 0.0);
-    return m_requestingDocument->loader()->timing()->convertMonotonicTimeToDocumentTime(seconds) * 1000.0;
+    if (!m_timing)
+        return responseStart();
+    return monotonicTimeToDocumentMilliseconds(m_requestingDocument.get(), m_finishTime);
 }
 
 double PerformanceResourceTiming::resourceTimeToDocumentMilliseconds(int deltaMilliseconds) const
 {
-    return monotonicTimeToDocumentMilliseconds(m_timing->requestTime) + deltaMilliseconds;
+    if (!deltaMilliseconds)
+        return 0.0;
+    return monotonicTimeToDocumentMilliseconds(m_requestingDocument.get(), m_timing->requestTime) + deltaMilliseconds;
 }
 
 } // namespace WebCore
