Source/WebCore/page/PerformanceResourceTiming.h
@@ -48,12 +48,12 @@ class ResourceResponse;
 
 class PerformanceResourceTiming : public PerformanceEntry {
 public:
-    static PassRefPtr<PerformanceResourceTiming> create(const ResourceRequest& request, const ResourceResponse& response, double finishTime, Document* requestingDocument)
+    static PassRefPtr<PerformanceResourceTiming> create(const AtomicString& initiatorType, const ResourceRequest& request, const ResourceResponse& response, double initiationTime, double finishTime, Document* requestingDocument)
     {
-        return adoptRef(new PerformanceResourceTiming(request, response, finishTime, requestingDocument));
+        return adoptRef(new PerformanceResourceTiming(initiatorType, request, response, initiationTime, finishTime, requestingDocument));
     }
 
-    String initiatorType() const;
+    AtomicString initiatorType() const;
 
     double redirectStart() const;
     double redirectEnd() const;
@@ -70,12 +70,12 @@ public:
     virtual bool isResource() { return true; }
 
 private:
-    PerformanceResourceTiming(const ResourceRequest&, const ResourceResponse&, double finishTime, Document*);
+    PerformanceResourceTiming(const AtomicString& initatorType, const ResourceRequest&, const ResourceResponse&, double initiationTime, double finishTime, Document*);
     ~PerformanceResourceTiming();
 
-    double monotonicTimeToDocumentMilliseconds(double seconds) const;
     double resourceTimeToDocumentMilliseconds(int deltaMilliseconds) const;
 
+    AtomicString m_initiatorType;
     RefPtr<ResourceLoadTiming> m_timing;
     double m_finishTime;
     RefPtr<Document> m_requestingDocument;
